class="ui-sortable-handle"

--- a/src/scss/_modules/_page-logo.scss
+++ b/src/scss/_modules/_page-logo.scss
@@ -24,8 +24,9 @@
 	@extend %general-animation;
 
 	img {
-		width: $header-logo-width;
-		height: $header-logo-height;
+		width: 153px;
+		height: 51px;
+		margin: 20px;
 	}
 
 	.page-logo-link {
