--- a/src/scss/_modules/_nav-info-card.scss
+++ b/src/scss/_modules/_nav-info-card.scss
@@ -14,17 +14,18 @@
 	transition: all 700ms cubic-bezier(0.34, 1.25, 0.3, 1);
 
 	img.cover {
-		opacity: 0.5;
+		opacity: 0.3;
 		top: 0;
 		left: 0;
 		bottom: 0;
 		right: 0;
 		position: absolute;
+		width: 295px;
 		@extend %bg-img-cover;
 		@extend %common-animation-opacity;
 
 		//height: 100%; //it was pixelating
-		height: auto;
+		height: 162px;
 	}
 
 	.profile-image {
@@ -60,7 +61,7 @@
 
 		&:hover {
 			img.cover {
-				opacity: 0.7;
+				opacity: 0.3;
 				@include backface-visibility;
 			}
 		}
